lispbuilder-sdl-ttf/glue/lispbuilder-sdl-ttf-glue.h

extern DECLSPEC SDL_Surface * SDLCALL TTF_glue_RenderText_Solid(TTF_Font *font,
				const char *text, SDL_Color *fg);
extern DECLSPEC SDL_Surface * SDLCALL TTF_glue_RenderUTF8_Solid(TTF_Font *font,
				const char *text, SDL_Color *fg);
extern DECLSPEC SDL_Surface * SDLCALL TTF_glue_RenderUNICODE_Solid(TTF_Font *font,
				const Uint16 *text, SDL_Color *fg);
extern DECLSPEC SDL_Surface * SDLCALL TTF_glue_RenderGlyph_Solid(TTF_Font *font,
					Uint16 ch, SDL_Color *fg);
extern DECLSPEC SDL_Surface * SDLCALL TTF_glue_RenderText_Shaded(TTF_Font *font,
				const char *text, SDL_Color *fg, SDL_Color *bg);
extern DECLSPEC SDL_Surface * SDLCALL TTF_glue_RenderUTF8_Shaded(TTF_Font *font,
				const char *text, SDL_Color *fg, SDL_Color *bg);
extern DECLSPEC SDL_Surface * SDLCALL TTF_glue_RenderUNICODE_Shaded(TTF_Font *font,
				const Uint16 *text, SDL_Color *fg, SDL_Color *bg);
extern DECLSPEC SDL_Surface * SDLCALL TTF_glue_RenderGlyph_Shaded(TTF_Font *font,
				Uint16 ch, SDL_Color *fg, SDL_Color *bg);
extern DECLSPEC SDL_Surface * SDLCALL TTF_glue_RenderText_Blended(TTF_Font *font,
				const char *text, SDL_Color *fg);
extern DECLSPEC SDL_Surface * SDLCALL TTF_glue_RenderUTF8_Blended(TTF_Font *font,
				const char *text, SDL_Color *fg);
extern DECLSPEC SDL_Surface * SDLCALL TTF_glue_RenderUNICODE_Blended(TTF_Font *font,
				const Uint16 *text, SDL_Color *fg);